# ExpanderCompilerCollection

./: .gitignore  Cargo.toml
expander_compiler/: Cargo.toml
expander_compiler/experiments/: benchmark_ezkl.py
expander_compiler/src/: lib.rs
expander_compiler/src/circuit/: mod.rs
expander_compiler/src/frontend/: builder.rs  circuit.rs  mod.rs
expander_compiler/src/graph/: mod.rs
expander_compiler/src/tensor/: mod.rs  ops.rs  val.rs  var.rs
expander_compiler/tests/: 2_addition.onnx  addition.onnx  simple_add_m31.rs  simple_add_onnx.rs  simple_add_tensor.rs
zkml/: Cargo.toml
zkml/python/: README.md  pyproject.toml  setup.py  test_zkml.py
zkml/python/zkml.egg-info/: PKG-INFO
zkml/src/: dag.rs  lib.rs
zkml/src/verifiers/: add.rs  fft.rs  matmul.rs  mod.rs  sqrt.rs  sub.rs
zkml/tests/assets/: matmul_test.json
