[package]
name = "zkml"
version = "0.1.0"
edition = "2021"

[lib]
name = "zkml"
crate-type = ["cdylib"]

[dependencies]
expander_compiler = { path = "../expander_compiler"}
ark-ff = "0.4.0"
ark-bn254 = "0.4.0"
ark-std = "0.4.0"
rand.workspace = true
expander_config.workspace = true
expander_circuit.workspace = true
gkr.workspace = true
arith.workspace = true
gf2.workspace = true
mersenne31.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.19.0", features = ["extension-module"] }
mpi_config.workspace = true
gkr_field_config.workspace = true
